@@ -403,6 +403,8 @@ this. Was used when mwEmbed was going to be an extension.
   foo,bar@example,com
 * (bug 20176) Fix login/logout links in skin CologneBlue
 * (bug 20203) "Powered by Mediawiki" now has height/width on image tag
+* (bug 20273) Fix broken output when no pages are found in the content
+  namespaces
 
 == API changes in 1.16 ==
 
